@@ -15,7 +15,8 @@ EXTRA_DIST =			\
 DISTCLEANFILES =		\
 	intltool-extract	\
 	intltool-merge		\
-	intltool-update
+	intltool-update		\
+	sabayon.spec
 
 pycheck:
 	(cd lib; make pycheck) 
@@ -25,6 +26,6 @@ sabayon.spec: sabayon.spec.in Makefile
 	sed						\
                 -e s!\@VERSION\@!$(PACKAGE_VERSION)!	\
                 < $< > $@
-	
+
 rpm: sabayon.spec dist
 	@(rpmbuild -ta sabayon-$(PACKAGE_VERSION).tar.gz)
