@@ -1,5 +1,10 @@
 2005-02-15  Mark McLoughlin  <markmc@redhat.com>
 
+	* Makefile.am,
+	  admin-tool/Makefile.am: distcheck fixes.
+
+2005-02-15  Mark McLoughlin  <markmc@redhat.com>
+
 	Applying seems to actually work now ...
 
 	* admin-tool/sabayon-apply.in,
